--- a/4-analyses-with-tree-sequences.ipynb
+++ b/4-analyses-with-tree-sequences.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyses with tskit\n",
+    "# 4. Analyses with tskit\n",
     "\n",
     "At the end of the previous worksheet, we learnt how to convert a tree sequence's mutational information back into a VCF sequence file. This allows us to use software like `scikit-allel`, `plink`, `bcftools` and `vcftools` on our simulated datasets.\n",
     "\n",
@@ -27,10 +27,10 @@
     "Since tree sequences also contain information about ancestry and times, there are also many analyses we can *only* perform on tree sequences.\n",
     "We'll learn about some of these methods in this worksheet.\n",
     "\n",
-    " - 4.1: Site statistics\n",
-    " - 4.2: Branch statistics\n",
-    " - 4.3: Simplify\n",
-    " - 4.4: Population and individual-based ancestry"
+    " - [4.1: Site statistics](#4.1SiteStatistics)\n",
+    " - [4.2: Branch statistics](#4.2BranchStatistics)\n",
+    " - [4.3: Simplify](#4.3Simplify)\n",
+    " - [4.4: Population and individual-based ancestry](#4.4PopulationBasedAncestry)"
    ]
   },
   {
@@ -128,6 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='4.1SiteStatistics'></a>\n",
     "## 4.1 Site statistics"
    ]
   },
@@ -185,8 +186,6 @@
    "source": [
     "### The basic syntax: (nucleotide diversity)\n",
     "\n",
-    "(3.45pm)\n",
-    "\n",
     "`tskit` uses very similar syntax for all of its inbuilt statistics, so we'll explore the options using `diversity()` as an example.\n"
    ]
   },
@@ -221,8 +220,6 @@
    "metadata": {},
    "source": [
     "### Calculating statistics on subsets of the samples\n",
-    "\n",
-    "(3.50pm)\n",
     "\n",
     "Remember that this dataset consists of samples from three contemporary populations here, of different sizes. We’d expect them to each have different diversity levels, and for these to differ from the overall (sample-wide) diversity rate. We can get this information out by specifying each of these with the `sample_nodes` argument.\n",
     "\n",
@@ -299,8 +296,6 @@
    "metadata": {},
    "source": [
     "### Genome scans\n",
-    "\n",
-    "(4pm)\n",
     "\n",
     "So far, we’ve just been calculating statistics summarising diversity values along the entire simulated genome. However, in many cases, we might be more interested in how diversity varies along the genome. We can do this using the `windows` argument.\n",
     "\n",
@@ -379,9 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multi-way statistics\n",
-    "\n",
-    "(4.10pm)"
+    "### Multi-way statistics"
    ]
   },
   {
@@ -489,6 +482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='4.2BranchStatistics'></a>\n",
     "## 4.2 Branch statistics and the 'duality' of  tree-based statistics\n",
     "\n",
     "There are several different types of randomness in genetic models that interact with each other in complex ways.\n",
@@ -615,9 +609,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.3 Simplify\n",
-    "\n",
-    "(4.25pm)"
+    "<a id='4.3Simplify'></a>\n",
+    "## 4.3 Simplify"
    ]
   },
   {
@@ -679,9 +672,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='4.4PopulationBasedAncestry'></a>\n",
     "## 4.4 Population and individual-based ancestry\n",
-    "\n",
-    "(4.35pm)\n",
     "\n",
     "Why is understanding ancestry important?\n",
     "\n",
@@ -1002,7 +994,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use this information to plot local ancestry in each of our samples, for instance"
+    "We can use this information to plot local ancestry in each of our samples, for instance."
    ]
   },
   {
