--- a/4-analyses-with-tree-sequences.ipynb
+++ b/4-analyses-with-tree-sequences.ipynb
@@ -720,8 +720,6 @@
    "source": [
     "### Population-based ancestry with `link-ancestors`\n",
     "\n",
-    "(4.45pm)\n",
-    "\n",
     "Tree sequences thus contain richly detailed information about local ancestry: any sample node that descends from a node in a given population at some location will have ancestry with the population at the location."
    ]
   },
@@ -942,7 +940,7 @@
     "    data = {\n",
     "        'left': ancestor_table.left,\n",
     "        'right': ancestor_table.right,\n",
-    "        'population' : [get_population_id(u, ts) for u in ancestor_table.parent],\n",
+    "        'population' : [ts.node(n).population for n in ancestor_table.parent],\n",
     "        'child' : ancestor_table.child\n",
     "    }\n",
     ")\n",
