Small edits to worksheet 4.

--- a/4-analyses-with-tree-sequences.ipynb
+++ b/4-analyses-with-tree-sequences.ipynb
@@ -115,7 +115,7 @@
     "    population_size=pop_size,\n",
     "    sequence_length=seq_length,\n",
     "    recombination_rate=1e-8,\n",
-    "    random_seed=1234,  # only needed for repeatability\n",
+    "    random_seed=1234,\n",
     "    )\n",
     "\n",
     "# Add finite-site mutations.\n",
@@ -764,7 +764,7 @@
     "    ancestral=[\"SMALL\", \"BIG\"],\n",
     "    proportions=[0.5, 0.5]\n",
     ")\n",
-    "# demography.add_census(time=20.5)\n",
+    "# demography.add_census(time=599.5)\n",
     "demography.add_population_split(\n",
     "    time=600,\n",
     "    derived=[\"SMALL\", \"BIG\"],\n",
@@ -807,6 +807,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As we discussed above, 'ancestry' only makes sense with reference to a particular time. Generally what's meant by 'ancestry' is 'where the ancestors were at some particular point in the past'.\n",
+    "\n",
     "The `add_census` method is a special demographic event that records a node on all lineages that are extant at a given time.\n",
     "This is needed to simulate complete information about local ancestry."
    ]
@@ -917,7 +919,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that each node in the `parent` table above is one of the `census_nodes`. This is essentially what `link_ancestors` does -- it shows you directly which of your samples descend from which ancestors."
+    "Note that each node in the `parent` table above is one of the `census_nodes`. This is essentially what `link_ancestors` does -- it shows you directly which of your samples descend from which of the census ancestors."
    ]
   },
   {
@@ -952,7 +954,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(If you want: sort and squash the table...)"
+    "(If you want: here's some more advanced code to sort and squash the table...)"
    ]
   },
   {
@@ -1050,6 +1052,13 @@
     "chr1.set_ylabel('Chrom 1')\n",
     "chr1.tick_params(left=False, labelleft=False)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider re-running the code in this section with a larger sequence length to see a more interesting pattern of ancestry."
    ]
   },
   {
