Incorporated Andrea's comments

--- a/4-analyses-with-tree-sequences.ipynb
+++ b/4-analyses-with-tree-sequences.ipynb
@@ -158,7 +158,7 @@
     "$$ O\\left( n^2 m \\right) $$\n",
     "\n",
     "ie. quadratic in the number of samples $n$, and linear in the number of sites $m$.\n",
-    "However, there is an equivalent way of performing this calculation by assigning weights to the sample nodes, and propogating these values further up the tree using a 'summary function' at each mutation.\n",
+    "However, there is an equivalent way of performing this calculation by assigning weights to the sample nodes, and propagating these values further up the tree using a 'summary function' at each mutation.\n",
     "\n",
     " <img src=\"pics/worksheet4-node-weights.jpeg\" width=\"350\" height=\"350\">\n",
     " \n",
@@ -364,6 +364,7 @@
     "div_sweep = ts_sweep.diversity(windows=breakpoints)\n",
     "all_divs = np.append(div, np.reshape(div_sweep, newshape=(-1,1)), axis=1)\n",
     "lines = plt.plot(breakpoints[:-1], all_divs)\n",
+    "plt.legend(lines, names_to_plot);\n",
     "plt.xticks()\n",
     "plt.xlabel(\"Position on chromosome\")\n",
     "plt.ylim(0,0.0003)\n",
@@ -695,7 +696,7 @@
     "  - There is always variation within populations.\n",
     "  - Different 'populations' may be relevant in different epochs.\n",
     "  - Gene flow is often gradual and spatial in nature.\n",
-    "  - Eugenics happened.\n",
+    "  - (Consider the history of population genetics in humans:) eugenics happened.\n",
     "  \n",
     "The alternative is to think about ancestry on the level of *individuals*.\n",
     " \n",
