Small changes to worksheets 4 and 5

--- a/4-analyses-with-tree-sequences.ipynb
+++ b/4-analyses-with-tree-sequences.ipynb
@@ -1059,7 +1059,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider re-running the code in this section with a larger sequence length to see a more interesting pattern of ancestry."
+    "Consider re-running the code in this section with a larger sequence length to see a more interesting pattern of ancestry. (You might want to comment out the plotting code...)"
    ]
   },
   {
